--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.0.4",
-    "typescript-node": "^0.1.3"
+    "@changesets/changelog-github": "^0.4.8",
+    "@yaoxfly/changesets": "workspace:^",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
