--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
+    "@types/node": "^20.2.3",
     "@yaoxfly/changesets": "workspace:^",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
