--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=16",
     "pnpm": ">=8"
   },
+  "packageManager": "pnpm@8.4.0",
   "keywords": [],
   "author": "",
   "license": "MIT",
