--- a/packages/node-utils/package.json
+++ b/packages/node-utils/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@yaoxfly/node-utils",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
+  "description": "node utils",
   "main": "lib/src/index.js",
   "types": "lib/src/index.d.ts",
   "scripts": {
@@ -11,11 +10,22 @@
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "type": "module",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": "yaoxfly",
   "license": "MIT",
   "engines": {
     "node": ">=16"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yaoxfly/common.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yaoxfly/common/issues"
   },
   "devDependencies": {
     "@yaoxfly/eslint-config": "workspace:^"
