--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "pnpm build && pnpm release:only",
-    "release:only": "changeset publish --registry=https://registry.npmjs.com/"
+    "release:only": "changeset publish --registry=https://registry.npmjs.com/",
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "private": true,
   "engines": {
@@ -19,13 +21,38 @@
   },
   "packageManager": "pnpm@8.4.0",
   "keywords": [],
-  "author": "",
+  "author": "yaoxfly",
   "license": "MIT",
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@types/node": "^20.2.3",
     "@yaoxfly/changesets": "workspace:^",
+    "commitizen": "^4.3.0",
+    "commitlint-config-cz": "^0.13.3",
+    "cz-customizable": "^7.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "lint-staged": {
+    "*.{vue,js,ts,jsx,tsx}": [
+      "pnpm --parallel lint"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz.config.json"
+    }
   }
 }
