config: 更新helpUrl、homepage等地址

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,4 +1,4 @@
 {
   "extends": ["@commitlint/config-conventional", "cz"],
-  "helpUrl": "https://github.com/yaoxfly/common/blob/main/packages/verify-commit/README.md##Type"
+  "helpUrl": "https://github.com/yaoxfly/common/blob/main/packages/verify-commit/README.md#type"
 }
