--- a/packages/verify-commit/commitlint/.commitlintrc.json
+++ b/packages/verify-commit/commitlint/.commitlintrc.json
@@ -1,4 +1,4 @@
 {
   "extends": ["@commitlint/config-conventional", "cz"],
-  "helpUrl": "https://github.com/yaoxfly/common/blob/main/packages/verify-commit/README.md##Type"
+  "helpUrl": "https://github.com/yaoxfly/common/blob/main/packages/verify-commit/README.md#type"
 }
