--- a/packages/node-utils/package.json
+++ b/packages/node-utils/package.json
@@ -8,7 +8,8 @@
     "dev": "tsc -w",
     "build:tsc": "tsc",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build:tsc"
   },
   "type": "module",
   "private": false,
@@ -22,7 +23,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yaoxfly/common.git"
+    "url": "git+https://github.com/yaoxfly/common.git",
+    "directory": "packages/node-utils"
   },
   "bugs": {
     "url": "https://github.com/yaoxfly/common/issues"
