--- a/.cz.config.json
+++ b/.cz.config.json
@@ -30,9 +30,10 @@
       "value": "delete",
       "name": "delete：删除无用的文件夹或文件"
     },
-    { "value": "init", "name": "init:初始化代码" },
+    { "value": "init", "name": "init：初始化代码" },
     { "value": "test", "name": "test：包括单元测试、集成测试" },
-    { "value": "revert", "name": "revert：代码回退到某个版本节点" }
+    { "value": "revert", "name": "revert：代码回退到某个版本节点" },
+    { "value": "publish", "name": "publish：发布新版本" }
   ],
 
   "messages": {
