--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "pnpm build && pnpm release:only",
+    "release": "pnpm --parallel  build:tsc && pnpm release:only",
     "release:only": "changeset publish --registry=https://registry.npmjs.com/",
     "prepare": "husky install",
     "commit": "git-cz"
